tests/type_errors/variant_wrong_type_to_fn.nos
# expect_error: type mismatch
# Test: passing wrong variant type to function

type Color = Red | Green | Blue
type Size = Small | Medium | Large

getColorCode(Red) = 1
getColorCode(Green) = 2
getColorCode(Blue) = 3

main() = getColorCode(Small)  # Small is Size, not Color
